# CryCal

./: .gitignore  LICENSE  README.md  format.sh  pyproject.toml
.github/workflows/: ci.yml
src/: calculator.py  custom_types.py  trader.py  utils.py
tests/: test_calculator.py  test_trader.py
tests/test_data/: official.csv  simple.csv
