[project]
name = "crycal"
version = "0.1.0"
description = "cryptocurrency calculator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dateutil>=2.9.0.post0",
    "ruff>=0.7.3",
    "tqdm>=4.67.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E501"]
