[project]
name = "crycal"
version = "0.1.0"
description = "cryptocurrency calculator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dateutil>=2.9.0.post0",
    "tabulate>=0.9.0",
    "tqdm>=4.67.0",
]

[tool.ruff]
line-length = 119

[tool.ruff.format]
docstring-code-format = true

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.4",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests",]
